# flang

./: .gitignore  CMakeLists.txt  grammar.md  run.sh  test.fg  todo.md
libs/spdlog/: CMakeLists.txt
src/: Generator.cpp  Generator.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  main.cpp  shared.cpp  shared.h
